# parsedantic

./: .gitignore  README.md  pyproject.toml
src/: README.md
src/parsedantic/: __init__.py  builder.py  codec.py  config.py  errors.py  fields.py  generator.py  models.py  parsers.py  types.py
src/parsedantic/core/: __init__.py  parser.py  parser_v2.py
src/parsedantic/errors/: __init__.py  parse_error.py
src/parsedantic/inference/: __init__.py  advanced.py  basic.py  inference.py  old_basic.py  old_container.py
src/parsedantic/model/: __init__.py  base.py  parser_builder.py  separator.py  serializer.py
src/parsedantic/primitives/: __init__.py  character.py  control.py  numeric.py  text.py
src/parsedantic/types/: __init__.py  annotation.py  metadata.py
tests/: __init__.py  conftest.py  test_builder.py  test_caching.py  test_codec.py  test_composition.py  test_config.py  test_errors.py  test_fields.py  test_forward_refs.py  test_generator.py  test_list.py  test_models.py  test_optional.py  test_parsers.py  test_setup.py  test_types.py  test_union.py
tests/core/: __init__.py  test_parser.py
tests/errors/: __init__.py  test_parse_error.py
tests/inference/: __init__.py  test_advanced.py  test_basic.py  test_container.py
tests/integration/: __init__.py  v2_test_roundtrip.py
tests/model/: __init__.py  test_base.py  test_config.py  test_serializer.py
tests/primitives/: __init__.py  test_character.py  test_control.py  test_numeric.py  test_text.py
tests/types/: __init__.py  test_annotation.py
