# /mnt/data/pyproject.toml
[project]
name = "parsedantic"
version = "2.0.0"
description = "Parser combinators with deep Pydantic integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "parsy>=2.1",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "pydantic>=2.10", "parsy>=2.1"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
